# modelmuxer

./: .bandit  .env.example  .env.secure  .env.security  .env.test  .flake8  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  .snyk  CHUNKED_PROCESSING_LINTING_REPORT.md  COPYRIGHT  Dockerfile  Dockerfile.alpine  Dockerfile.apple  Dockerfile.production  LICENSE  LICENSE_COMPLIANCE_REPORT.md  Makefile  NOTICE  README.md  SECURITY.md  TASK_COMPLETION_SUMMARY.md  THIRD_PARTY_LICENSES.md  TRADEMARKS.md  compliance_report.json  container-compose.yaml  docker-compose.yaml  docker-compose.yml  faq.md  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_costs.py  test_requests.py  test_router.py  troubleshooting.md
.augment/rules/: rule-augment.md
.cursor/rules/: api-and-tests.mdc  caching-storage.mdc  coding-standards.mdc  configuration.mdc  enterprise-features.mdc  observability.mdc  project-structure.mdc  providers.mdc  routing.mdc  security-auth.mdc
.github/: CODEOWNERS  ENVIRONMENTS.md  markdown-link-check-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: build.yaml  build.yml  ci.yaml  ci.yml  claude-code-review.yml  claude.yml  code-quality.yaml  codeql.yaml  codeql.yml  container-security.yaml  container-security.yml  deploy-production.yaml  deploy-production.yml  deploy-staging.yaml  deploy-staging.yml  license-compliance.yaml  license-compliance.yml  security.yaml  test.yaml  test.yml
.kilocode/rules/: mode-coding.md  mode-review.md  workspace-docs.md  workspace-overrides.md  workspace-restricted.md  workspace-security.md
app/: __init__.py  auth.py  config.py  cost_tracker.py  cost_tracker_enhanced.py  database.py  main.py  main_enhanced.py  models.py  router.py  settings.py
app/api/: __init__.py
app/cache/: __init__.py  memory_cache.py  redis_cache.py
app/classification/: __init__.py  embeddings.py  prompt_classifier.py
app/config/: __init__.py  enhanced_config.py
app/core/: __init__.py  costing.py  exceptions.py  features.py  intent.py  interfaces.py  routing_rules.py  serialization.py  utils.py  validation_helpers.py
app/enterprise/: models.py  organization_manager.py
app/middleware/: __init__.py  auth_middleware.py  logging_middleware.py  rate_limit_middleware.py
app/monitoring/: __init__.py  health_checker.py  metrics.py  metrics_collector.py
app/policy/: __init__.py  rules.py
app/providers/: __init__.py  anthropic.py  anthropic_provider.py  base.py  cohere.py  cohere_provider.py  google.py  google_provider.py  groq.py  groq_provider.py  litellm_provider.py  mistral.py  mistral_provider.py  ollama.py  openai.py  openai_provider.py  registry.py  together.py  together_provider.py
app/routing/: __init__.py  base_router.py  cascade_router.py  heuristic_router.py  hybrid_router.py  semantic_router.py  semantic_router_optional.py
app/security/: auth.py  config.py  middleware.py  pii_protection.py
app/telemetry/: logging.py  metrics.py  tracing.py
compliance/: compliance_report.json
config/: litellm-config.yaml
docs/: CODE_OF_CONDUCT.md  GOVERNANCE_IMPLEMENTATION_COMPLETE.md  REPOSITORY_GOVERNANCE.md  api-reference.md  architecture-overview.md  architecture.md  ci-cd-pipeline.md  configuration.md  containerization-guide.md  contributing.md  deployment.md  environment-configuration.md  faq.md  github-secrets.md  installation.md  monitoring.md  performance.md  sdks.md  security-assessment-2025.md  security.md  testing.md  troubleshooting.md
docs/architecture/: README.md
docs/deployment/: production-checklist.md  production-guide.md
docs/design/: agent-budget-firewall.md
docs/integrations/: claude-integration.md
docs/openapi/: openapi.yaml
docs/providers/: litellm.md
grafana/: dashboard_modelmuxer.json
infra/: docker-compose.litellm.yaml  docker-compose.simple.yaml
infra/docker/: Dockerfile  Dockerfile.apple  Dockerfile.production
infra/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  postgresql.yaml  redis.yaml  secrets.yaml  service.yaml
scripts/: activate_env.sh  add_license_headers.py  apple-container-commands.sh  budget_dashboard.py  check_license_compliance.py  chunked_file_processor.py  claude-cli.py  configure_claude_cli.ps1  container-auto.sh  generate_keys.py  start.sh  test_claude_integration.ps1  validate_direct_provider_architecture.py  verify_security_setup.py
scripts/data/: prices.json  routing_rules.json
tests/: __init__.py  conftest.py  test_api.py  test_api_contract_stability.py  test_auth.py  test_budget_constraint_enforcement_comprehensive.py  test_budget_management.py  test_cache.py  test_comprehensive_direct_provider_validation.py  test_constants.py  test_cost_estimation_integration_comprehensive.py  test_cost_tracking.py  test_direct_provider_integration_suite.py  test_enhanced_config.py  test_enhanced_features.py  test_enhanced_modelmuxer.py  test_heuristic_router_scope.py  test_intent_classifier.py  test_interactive.py  test_litellm_benchmarks.py  test_litellm_integration.py  test_litellm_provider.py  test_monitoring.py  test_pii_protection.py  test_price_table_coverage.py  test_provider_availability_validation_comprehensive.py  test_request_validation.py  test_requests.py  test_router.py  test_router_model_selection_comprehensive.py  test_routing.py  test_settings.py  test_streaming.py  test_updated_routing.py
tests/direct/: __init__.py  test_budget_constraints_direct.py  test_end_to_end_direct.py  test_error_handling_fallbacks.py  test_provider_response_consistency.py  test_router_direct_preferences.py
tests/e2e/: test_comprehensive_direct_provider_validation.py  test_enhanced_features.py  test_enhanced_modelmuxer.py  test_interactive.py
tests/fixtures/: MOCKING_GUIDE.md  __init__.py  mocks.py  pytest_helpers.py  realistic_mocks.py  temp_files.py
tests/integration/: test_comprehensive_direct_provider_integration.py  test_realistic_provider_mocks.py  test_router_budget.py
tests/middleware/: test_auth_middleware.py  (+1 more)
(+79 files in other folders)
